--- a/index.html
+++ b/index.html
@@ -110,13 +110,9 @@
                                 </svg>
                             </button>
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy"
-                            src="https://i.scdn.co/image/ab67616d00001e026fbb60d6a7e03ccb940a518e"
-                            data-testid="card-image" alt=""
-                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
-                            height="150vh">
-                        <h2>Sapphire </h2>
-                        <p>Ed sheeren</p>
+                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e0214691359e2723059bbec9cde" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj" height="150px">
+                        <h2 class="songName"></h2>
+                        <p></p>
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -128,13 +124,10 @@
                                 </svg>
                             </button>
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy"
-                            src="https://i.scdn.co/image/ab67616d00001e02c05d5034282ebb1a0d94a26c"
-                            data-testid="card-image" alt=""
-                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e020f48649d4f365018a9dee53b" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2>Shaky</h2>
-                        <p>Sanju Rathod,G-SPXRK</p>
+                        <h2 class="songName"></h2>
+                        <p></p>
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -146,13 +139,10 @@
                                 </svg>
                             </button>
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy"
-                            src="https://i.scdn.co/image/ab67616d00001e0279dd2165f2180c79713bfe4a"
-                            data-testid="card-image" alt=""
-                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e02da990e21d4815d6b2b2d58e8" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2>Muththa Mazhai </h2>
-                        <p>A.R Rahman, Chinmayi, Siva Ananth</p>
+                        <h2></h2>
+                        <p></p>
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -164,13 +154,10 @@
                                 </svg>
                             </button>
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy"
-                            src="https://i.scdn.co/image/ab67616d00001e02975c6d9eb949f93ac25370dd"
-                            data-testid="card-image" alt=""
-                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e" alt="" class="mMx2LUixlnN_Fu45JpFB CmkY1Ag0tJDfnFXbGgju _EShSNaBK1wUIaZQFJJQ Yn2Ei5QZn19gria6LjZj" srcset="https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e 150w, https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e 300w, https://i.scdn.co/image/ab67616d0000b273c8e97cafeb2acb85b21a777e 320w, https://i.scdn.co/image/ab67616d0000b273c8e97cafeb2acb85b21a777e 640w" sizes="(min-width: 1280px) 232px, 192px"
                             height="150vh">
-                        <h2>0008 </h2>
-                        <p>Siddhu Moosewala, Jenny Johal, The Kidd</p>
+                        <h2 class="songName"></h2>
+                        <p></p>
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -182,13 +169,10 @@
                                 </svg>
                             </button>
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy"
-                            src="https://i.scdn.co/image/ab67616d00001e02712701c5e263efc8726b1464"
-                            data-testid="card-image" alt=""
-                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2> Heat Waves</h2>
-                        <p>Glass Animals</p>
+                        <h2 class="songName"></h2>
+                        <p></p>
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -200,13 +184,10 @@
                                 </svg>
                             </button>
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy"
-                            src="https://i.scdn.co/image/ab67616d00001e02712701c5e263efc8726b1464"
-                            data-testid="card-image" alt=""
-                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e0205177674b12f7cf7fa33f1dc" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2> Heat Waves</h2>
-                        <p>Glass Animals</p>
+                        <h2 class="songName"></h2>
+                        <p></p>
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -218,13 +199,10 @@
                                 </svg>
                             </button>
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy"
-                            src="https://i.scdn.co/image/ab67616d00001e02712701c5e263efc8726b1464"
-                            data-testid="card-image" alt=""
-                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2> Heat Waves</h2>
-                        <p>Glass Animals</p>
+                        <h2 class="songName"></h2>
+                        <p></p>
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -236,13 +214,10 @@
                                 </svg>
                             </button>
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy"
-                            src="https://i.scdn.co/image/ab67616d00001e02712701c5e263efc8726b1464"
-                            data-testid="card-image" alt=""
-                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e026fbb60d6a7e03ccb940a518e" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2> Heat Waves</h2>
-                        <p>Glass Animals</p>
+                        <h2 class="songName"></h2>
+                        <p></p>
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -254,13 +229,10 @@
                                 </svg>
                             </button>
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy"
-                            src="https://i.scdn.co/image/ab67616d00001e02712701c5e263efc8726b1464"
-                            data-testid="card-image" alt=""
-                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e0297585d74e0b581a23593f613" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2> Heat Waves</h2>
-                        <p>Glass Animals</p>
+                        <h2 class="songName"></h2>
+                        <p></p>
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -272,13 +244,10 @@
                                 </svg>
                             </button>
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy"
-                            src="https://i.scdn.co/image/ab67616d00001e02712701c5e263efc8726b1464"
-                            data-testid="card-image" alt=""
-                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e027480ebc1c684ccf400570a39" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2> Heat Waves</h2>
-                        <p>Glass Animals</p>
+                        <h2 class="songName">/h2>
+                        <p></p>
                     </div>
                 </div>
                 <div class="songList font">
