--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
                                 </svg>
                             </button>
                         </div>
+                        <div class="pausediv">
+                            <img width="44" height="44" src="svg/pauseCard.svg" alt="">
+                        </div>
                         <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e0214691359e2723059bbec9cde" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj" height="150px">
                         <h2 class="songName"></h2>
                         <p></p>
@@ -123,6 +126,9 @@
                                         d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
                                 </svg>
                             </button>
+                        </div>
+                        <div class="pausediv">
+                            <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
                         <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e020f48649d4f365018a9dee53b" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
@@ -139,6 +145,9 @@
                                 </svg>
                             </button>
                         </div>
+                        <div class="pausediv">
+                            <img width="44" height="44" src="svg/pauseCard.svg" alt="">
+                        </div>
                         <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e02da990e21d4815d6b2b2d58e8" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
                         <h2></h2>
@@ -153,6 +162,9 @@
                                         d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
                                 </svg>
                             </button>
+                        </div>
+                        <div class="pausediv">
+                            <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
                         <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e" alt="" class="mMx2LUixlnN_Fu45JpFB CmkY1Ag0tJDfnFXbGgju _EShSNaBK1wUIaZQFJJQ Yn2Ei5QZn19gria6LjZj" srcset="https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e 150w, https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e 300w, https://i.scdn.co/image/ab67616d0000b273c8e97cafeb2acb85b21a777e 320w, https://i.scdn.co/image/ab67616d0000b273c8e97cafeb2acb85b21a777e 640w" sizes="(min-width: 1280px) 232px, 192px"
                             height="150vh">
@@ -169,6 +181,9 @@
                                 </svg>
                             </button>
                         </div>
+                        <div class="pausediv">
+                            <img width="44" height="44" src="svg/pauseCard.svg" alt="">
+                        </div>
                         <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
                         <h2 class="songName"></h2>
@@ -183,6 +198,9 @@
                                         d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
                                 </svg>
                             </button>
+                        </div>
+                        <div class="pausediv">
+                            <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
                         <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e0205177674b12f7cf7fa33f1dc" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
@@ -199,6 +217,9 @@
                                 </svg>
                             </button>
                         </div>
+                        <div class="pausediv">
+                            <img width="44" height="44" src="svg/pauseCard.svg" alt="">
+                        </div>
                         <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
                         <h2 class="songName"></h2>
@@ -213,6 +234,9 @@
                                         d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
                                 </svg>
                             </button>
+                        </div>
+                        <div class="pausediv">
+                            <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
                         <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e026fbb60d6a7e03ccb940a518e" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
@@ -229,6 +253,9 @@
                                 </svg>
                             </button>
                         </div>
+                        <div class="pausediv">
+                            <img width="44" height="44" src="svg/pauseCard.svg" alt="">
+                        </div>
                         <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e0297585d74e0b581a23593f613" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
                         <h2 class="songName"></h2>
@@ -243,6 +270,9 @@
                                         d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
                                 </svg>
                             </button>
+                        </div>
+                        <div class="pausediv">
+                            <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
                         <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e027480ebc1c684ccf400570a39" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
@@ -303,4 +333,4 @@
     <script src="script.js"></script>
 </body>
 
-</html>
+</html> 
