--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
                         <div class="pausediv">
                             <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e0214691359e2723059bbec9cde" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj" height="150px">
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e0214691359e2723059bbec9cde"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj" height="150px">
                         <h2 class="songName"></h2>
                         <p></p>
                     </div>
@@ -130,7 +133,10 @@
                         <div class="pausediv">
                             <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e020f48649d4f365018a9dee53b" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e020f48649d4f365018a9dee53b"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
                         <h2 class="songName"></h2>
                         <p></p>
@@ -148,7 +154,10 @@
                         <div class="pausediv">
                             <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e02da990e21d4815d6b2b2d58e8" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e02da990e21d4815d6b2b2d58e8"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
                         <h2></h2>
                         <p></p>
@@ -166,7 +175,31 @@
                         <div class="pausediv">
                             <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e" alt="" class="mMx2LUixlnN_Fu45JpFB CmkY1Ag0tJDfnFXbGgju _EShSNaBK1wUIaZQFJJQ Yn2Ei5QZn19gria6LjZj" srcset="https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e 150w, https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e 300w, https://i.scdn.co/image/ab67616d0000b273c8e97cafeb2acb85b21a777e 320w, https://i.scdn.co/image/ab67616d0000b273c8e97cafeb2acb85b21a777e 640w" sizes="(min-width: 1280px) 232px, 192px"
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB CmkY1Ag0tJDfnFXbGgju _EShSNaBK1wUIaZQFJJQ Yn2Ei5QZn19gria6LjZj"
+                            srcset="https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e 150w, https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e 300w, https://i.scdn.co/image/ab67616d0000b273c8e97cafeb2acb85b21a777e 320w, https://i.scdn.co/image/ab67616d0000b273c8e97cafeb2acb85b21a777e 640w"
+                            sizes="(min-width: 1280px) 232px, 192px" height="150vh">
+                        <h2 class="songName"></h2>
+                        <p></p>
+                    </div>
+                    <div class="card">
+                        <div class="playdiv">
+                            <button class="play-button">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 24 24"
+                                    fill="black">
+                                    <path
+                                        d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
+                                </svg>
+                            </button>
+                        </div>
+                        <div class="pausediv">
+                            <img width="44" height="44" src="svg/pauseCard.svg" alt="">
+                        </div>
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
                         <h2 class="songName"></h2>
                         <p></p>
@@ -184,7 +217,10 @@
                         <div class="pausediv">
                             <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e0205177674b12f7cf7fa33f1dc"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
                         <h2 class="songName"></h2>
                         <p></p>
@@ -202,7 +238,10 @@
                         <div class="pausediv">
                             <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e0205177674b12f7cf7fa33f1dc" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
                         <h2 class="songName"></h2>
                         <p></p>
@@ -220,7 +259,10 @@
                         <div class="pausediv">
                             <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e020a47bbe7141fdfe0eb2cdba7" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e026fbb60d6a7e03ccb940a518e"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
                         <h2 class="songName"></h2>
                         <p></p>
@@ -238,7 +280,10 @@
                         <div class="pausediv">
                             <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e026fbb60d6a7e03ccb940a518e" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e0297585d74e0b581a23593f613"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
                         <h2 class="songName"></h2>
                         <p></p>
@@ -256,43 +301,128 @@
                         <div class="pausediv">
                             <img width="44" height="44" src="svg/pauseCard.svg" alt="">
                         </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e0297585d74e0b581a23593f613" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
-                            height="150vh">
-                        <h2 class="songName"></h2>
-                        <p></p>
-                    </div>
-                    <div class="card">
-                        <div class="playdiv">
-                            <button class="play-button">
-                                <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 24 24"
-                                    fill="black">
-                                    <path
-                                        d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
-                                </svg>
-                            </button>
-                        </div>
-                        <div class="pausediv">
-                            <img width="44" height="44" src="svg/pauseCard.svg" alt="">
-                        </div>
-                        <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e027480ebc1c684ccf400570a39" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e027480ebc1c684ccf400570a39"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
                         <h2 class="songName">/h2>
-                        <p></p>
+                            <p></p>
                     </div>
                 </div>
                 <div class="songList font">
                     <h2>Quick picks</h2>
                     <ul>
-                        <li> <button class="songs font"> Play First Song</button> </li>
-                        <li> <button class="songs font"> Play Second Song</button> </li>
-                        <li> <button class="songs font"> Play Third Song</button> </li>
-                        <li> <button class="songs font"> Play Fourth Song</button> </li>
-                        <li> <button class="songs font"> Play Fivth Song</button> </li>
-                        <li> <button class="songs font"> Play sixth Song</button> </li>
-                        <li> <button class="songs font"> Play seventh Song</button> </li>
-                        <li> <button class="songs font"> Play eighth Song</button> </li>
-                        <li> <button class="songs font"> Play ninth Song</button> </li>
-                        <li> <button class="songs font"> Play tenth Song</button> </li>
+                        <li>
+                            <button class="songs font">
+                                <div class="song-thumb">
+                                    <img src="your-image-url.jpg" alt="Album cover">
+                                    <div class="hover-play">
+                                        <img src="svg/play.svg" alt="Play Icon">
+                                    </div>
+                                </div>
+                                <span class="label">Play First Song</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="songs font">
+                                <div class="song-thumb">
+                                    <img src="your-image-url.jpg" alt="Album cover">
+                                    <div class="hover-play">
+                                        <img src="svg/play.svg" alt="Play Icon">
+                                    </div>
+                                </div>
+                                <span class="label">Play Second Song</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="songs font">
+                                <div class="song-thumb">
+                                    <img src="your-image-url.jpg" alt="Album cover">
+                                    <div class="hover-play">
+                                        <img src="svg/play.svg" alt="Play Icon">
+                                    </div>
+                                </div>
+                                <span class="label">Play Third Song</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="songs font">
+                                <div class="song-thumb">
+                                    <img src="your-image-url.jpg" alt="Album cover">
+                                    <div class="hover-play">
+                                        <img src="svg/play.svg" alt="Play Icon">
+                                    </div>
+                                </div>
+                                <span class="label">Play Fourth Song</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="songs font">
+                                <div class="song-thumb">
+                                    <img src="your-image-url.jpg" alt="Album cover">
+                                    <div class="hover-play">
+                                        <img src="svg/play.svg" alt="Play Icon">
+                                    </div>
+                                </div>
+                                <span class="label">Play Five Song</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="songs font">
+                                <div class="song-thumb">
+                                    <img src="your-image-url.jpg" alt="Album cover">
+                                    <div class="hover-play">
+                                        <img src="svg/play.svg" alt="Play Icon">
+                                    </div>
+                                </div>
+                                <span class="label">Play Sixth Song</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="songs font">
+                                <div class="song-thumb">
+                                    <img src="your-image-url.jpg" alt="Album cover">
+                                    <div class="hover-play">
+                                        <img src="svg/play.svg" alt="Play Icon">
+                                    </div>
+                                </div>
+                                <span class="label">Play Seventh Song</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="songs font">
+                                <div class="song-thumb">
+                                    <img src="your-image-url.jpg" alt="Album cover">
+                                    <div class="hover-play">
+                                        <img src="svg/play.svg" alt="Play Icon">
+                                    </div>
+                                </div>
+                                <span class="label">Play Eighth Song</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="songs font">
+                                <div class="song-thumb">
+                                    <img src="your-image-url.jpg" alt="Album cover">
+                                    <div class="hover-play">
+                                        <img src="svg/play.svg" alt="Play Icon">
+                                    </div>
+                                </div>
+                                <span class="label">Play Ninth Song</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="songs font">
+                                <div class="song-thumb">
+                                    <img src="your-image-url.jpg" alt="Album cover">
+                                    <div class="hover-play">
+                                        <img src="svg/play.svg" alt="Play Icon">
+                                    </div>
+                                </div>
+                                <span class="label">Play Tenth Song</span>
+                            </button>
+                        </li>
                     </ul>
                 </div>
                 <div class="sample">
@@ -333,4 +463,4 @@
     <script src="script.js"></script>
 </body>
 
-</html> 
+</html>
