mobile view  bugs resolved

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Spotify - Web Player: Music for everyone</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utilities.css">
@@ -321,7 +321,10 @@
                                         <img src="svg/play.svg" alt="Play Icon">
                                     </div>
                                 </div>
-                                <span class="label">Play First Song</span>
+                                <span class="label">Play First Song
+                                    <h2></h2>
+                                <p></p>
+                                </span>
                             </button>
                         </li>
                         <li>
